--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/jass4-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JASS4</title>
+    <title>JASS4 Lubricant | Unmatched Experience And Expertise in Lubricants Industry </title>
   </head>
   <body>
     <div id="root"></div>
