JASS4 to JASS MAX1

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name=”robots” content="index, follow">
     <meta name="google-site-verification" content="xjXPDYNH1JGC29__TLRIcVtK7aP5OemJRyWSi_C95fQ" />
-    <meta name="description" content="JASS4 Lubricant is a world recognized company in lubricant and chemical products. The company started in the year 2012. It is present in 16 countries and 5 commercial offices based in Singapore, Cambodia, China, India and Bangladesh.">
-    <title>JASS4 Lubricant | Unmatched Experience And Expertise in Lubricants Industry </title>
+    <meta name="description" content="JASS MAX1 Lubricant is a world recognized company in lubricant and chemical products. The company started in the year 2012. It is present in 16 countries and 5 commercial offices based in Singapore, Cambodia, China, India and Bangladesh.">
+    <title>JASS MAX1  Lubricant | Unmatched Experience And Expertise in Lubricants Industry </title>
   </head>
   <body>
     <div id="root"></div>
