--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/jass4-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/JASS-MAX1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name=”robots” content="index, follow">
     <meta name="google-site-verification" content="xjXPDYNH1JGC29__TLRIcVtK7aP5OemJRyWSi_C95fQ" />
